# say-it

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DESIGN.md  LICENSE  PRODUCT.md  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: launch.json
.github/workflows/: release.yml
.impeccable/: design.json
.impeccable/live/: config.json
docs/experience/: CPAL WASAPI 输出设备 loopback 配置.md  DeepSeek思考开关不能复用OpenAI推理强度字段.md  Field操作按钮与控件高度不一致的根因与防线.md  GitHub Release 从 CHANGELOG 提取版本更新日志.md  JavaScript插件运行时不可依赖浏览器URL全局.md  PP-OCR内存占用实测与MNN本地编译结论.md  Tauri-Windows覆盖配置会重新引入基础配置已移除的资源.md  Tauri同步命令首次创建Webview导致invoke卡住.md  Tauri命令结构体参数必须按形参名包裹.md  Windows-Graphics-Capture可选能力必须先探测.md  Windows-UIA大型辅助功能树捕获超时优化.md  Windows原生上下文探针的UIAutomation头文件与按需生命周期.md  Windows原生上下文超时应保留基础窗口元信息.md  Windows浏览器上下文应优先定点读取而非全局焦点.md  Windows激活窗口截图无帧黄框与OCR排序崩溃.md  Windows系统OCR-WinRT接入要点.md  cargo-check-不要与-ui-build-并行.md  cargo-fmt-全仓格式化污染.md  fun-asr-flash与qwen3-asr-flash响应结构不同不能共用解析.md  obs-transparent-webview-capture.md  serde-json-preserve-order-影响插件签名稳定性.md  sherpa-onnx-VAD喂入块过大与误reset导致无识别结果.md  sherpa-onnx与MNN在Windows不可同时静态链接.md  sherpa-onnx本地模型标点与时间戳能力实测.md  修改-tauri-identifier-时要兼容旧本地状态目录.md  共享指示器在听写启动时必须重置显示模式.md  发布版本时同步更新 Cargo 与前端版本号.md  字幕编辑器播放头暂停恢复瞬间卡顿跳变.md  实时字幕单句替换模式内容溢出后卡住不更新.md  实时字幕单句替换模式短暂停顿不应清空当前行.md  实时字幕悬浮窗阴影被窗口边界裁切.md  实时识别插件停止时应等待最终结果且不要本地抢先判临时凭据过期.md  录音识别短音频模型不能复用OSS临时上传地址.md  持久化值正确但自定义下拉框回显错误.md  持久化密钥字段必须复用统一掩码与显隐实现.md  排序持久化复用全局busy导致控件闪烁.md  (+7 more)
model-packs/: RELEASE_NOTES.md  paraformer-online-int8.json  ppocr-v6-tiny.json  sensevoice-small-int8.json
scripts/: build-context-probe.mjs  同步测试技能目录.ps1  构建上下文探针.ps1  测量进程内存.ps1
shared/: asr-models.json
src-tauri/: Cargo.toml  Info.plist  build.rs  nsis-hooks.nsh  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/context-probe/: CMakeLists.txt
src-tauri/context-probe/src/: ia2_text.h  main.cpp
src-tauri/icons/: icon.icns
src-tauri/resources/licenses/: ACTIVE_APP_OCR_NOTICES.txt  IAccessible2-BSD-3-Clause.txt  MIT.txt  SHERPA_ONNX_NOTICES.txt  selection-hook-MIT.txt
src-tauri/src/: audio_dsp.rs  hotkey.rs  hotkey_portable.rs  main.rs  obs_overlay.rs  persistence.rs  prelude.rs  state.rs  text_align.rs
src-tauri/src/active_app_context/: debug.rs  mod.rs  model.rs  native_probe.rs  normalize.rs  ocr.rs  screen_capture.rs  unsupported.rs  windows.rs  windows_ocr.rs
src-tauri/src/application/: audio_lab.rs  audio_session.rs  catalog.rs  compare.rs  contract.rs  customization.rs  data_root.rs  dictation.rs  events.rs  llm_models.rs  mod.rs  plugin_management.rs  settings.rs  smart_text.rs  subtitle_document.rs  transcription.rs  window_lifecycle.rs
src-tauri/src/application/subtitles/: mod.rs
src-tauri/src/commands/: asr.rs  audio.rs  common.rs  customization.rs  dictation.rs  funasr.rs  mod.rs  obs.rs  session.rs  shortcuts.rs  subtitles.rs  transcription.rs  translation.rs
src-tauri/src/commands/asr/: local_session.rs  mod.rs  plugin_session.rs  session.rs  silence_test.rs
src-tauri/src/desktop/: backend_mic.rs  backend_system_audio.rs  backend_system_audio_unsupported.rs  context_debug.rs  indicator.rs  mod.rs  system_fonts.rs  window.rs
src-tauri/src/ocr/: mod.rs  windows.rs
src-tauri/src/providers/: browser_session_capture.rs  capabilities.rs  mod.rs  model_download.rs  plugin.rs  plugin_package.rs  plugin_runtime.rs  plugin_secrets.rs  registry.rs  testing.rs
src-tauri/src/providers/alibabacloud/: customization.rs  mod.rs  protocol.rs  transcription.rs  translation.rs  uploads.rs  urls.rs
src-tauri/src/providers/alibabacloud/transcription/: mod.rs  types.rs
src-tauri/src/providers/local_asr/: mod.rs
src-tauri/windows/: nsis-hooks.nsh
ui/: context-debug.html  index.html  indicator.html
(+205 files in other folders)
