[package]
name = "say-it"
version = "0.1.0"
description = "说吧！"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
base64 = "0.22.1"
futures-util = "0.3.31"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rustls = { version = "0.23.37", features = ["ring"] }
tauri = { version = "2.10.3", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tokio = { version = "1", features = ["sync", "time"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
url = "2.5.7"
uuid = { version = "1.18.1", features = ["v4"] }
reqwest = { version = "0.12", default-features = false, features = ["default-tls", "rustls-tls", "gzip", "json", "stream", "http2"] }
enigo = "0.3"
arboard = "3"
cpal = "0.15"
nnnoiseless = "0.5"
ebur128 = "0.1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Storage_FileSystem",
] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
