[package]
name = "say-it"
version = "0.3.3"
description = "说吧！"
authors = ["痕继痕迹"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
base64 = "0.22.1"
ed25519-dalek = "2.2"
futures-util = "0.3.31"
axum = { version = "0.8.9", features = ["ws"] }
obws = "0.15.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
rustls = { version = "0.23.37", features = ["ring"] }
tauri = { version = "2.10.3", features = ["tray-icon", "protocol-asset"] }
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
tokio = { version = "1", features = ["net", "sync", "time", "process", "io-util"] }
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
url = "2.5.7"
uuid = { version = "1.18.1", features = ["v4"] }
reqwest = { version = "0.12", default-features = false, features = ["default-tls", "rustls-tls", "gzip", "json", "stream", "http2", "multipart"] }
enigo = "0.3"
arboard = "3"
cpal = "0.15"
nnnoiseless = "0.5"
ebur128 = "0.1"
symphonia = { version = "0.6.0", features = ["mp3", "aac", "isomp4", "ogg"] }
ogg-opus = "0.1.2"
mp3lame-encoder = "0.2.4"
once_cell = "1.20"
fancy-regex = "0.14"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Storage_FileSystem",
    "Win32_Security_Cryptography",
] }
winreg = "0.52"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
